--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-body{
+body {
     background: black;
-    height: 98vh;
+    width: 96vw;
+    height: 96vh;
+    min-width: 580px;
     display: flex;
 }
 
-.square{
+.square {
     margin: 0 auto;
+    box-sizing: border-box;
     margin-top: 6.5%;
-    width: 50%;
-    height: 75%;
+    width: 700px;
+    height: 700px;
     background: silver;
 }
 
@@ -22,6 +25,10 @@ body{
     animation: move 5s infinite linear;
 }
 
+.circle:hover {
+    border-radius: 50%;
+}
+
 @keyframes move {
     from {
         top: 3%;
@@ -29,21 +36,19 @@ body{
     }
     25% {
         top: 3%;
-        left: 88%;
+        left: 80%;
         background: springgreen;
     }
     50% {
         top: 82%;
-        left: 88%;
+        left: 80%;
         background: tomato;
     }
-
     75% {
         top: 82%;
         left: 3%;
         background: violet;
     }
-
     to {
         top: 3%;
         left: 3%;
