--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     margin-top: 6.5%;
     width: 700px;
     height: 700px;
-    background: silver;
+    background: rgb(124, 78, 78);
 }
 
 .circle {
